RESOLVED FIXED 254722
MathML element in "display: flex" is not repainted on content change.
https://bugs.webkit.org/show_bug.cgi?id=254722
Summary MathML element in "display: flex" is not repainted on content change.
Takao Baba
Reported 2023-03-29 21:37:53 PDT
Steps to reproduce: 1. Open https://jsbin.com/qubivebiju/edit?html,output 2. Wait one second. Expected behavior: The text "12" is shown. Actual behavior: Only "1" is shown. "2" exists on DOM, but not visible. As it seems a paint invalidation issue, "2" will appear on selection.
Attachments
Patch (6.42 KB, patch)
2023-04-05 08:32 PDT, alan
no flags
Patch (6.41 KB, patch)
2023-04-05 10:08 PDT, alan
no flags
Patch (6.41 KB, patch)
2023-04-06 07:29 PDT, alan
no flags
alan
Comment 1 2023-04-05 08:32:34 PDT
alan
Comment 2 2023-04-05 10:08:25 PDT
Radar WebKit Bug Importer
Comment 3 2023-04-05 21:38:14 PDT
alan
Comment 4 2023-04-06 07:29:12 PDT
EWS
Comment 5 2023-04-06 11:53:31 PDT
Committed 262674@main (63e18b5e9ecd): <https://commits.webkit.org/262674@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 465797 [details].
Note You need to log in before you can comment on or make changes to this bug.