MathML element in "display: flex" is not repainted on content change. https://bugs.webkit.org/show_bug.cgi?id=254722

Reviewed by Antti Koivisto.

1. RenderMathMLBlock::layoutItems -> this is similar to what other FCs do on first layout (i.e. full repaint) -see RenderFlexibleBox::layoutAndPlaceChildren, RenderBlockflow::layoutBlockChild.
2. RenderMathMLMath::centerChildren/layoutRowItems -> introduce some generic repaint logic when things get moved around.

* LayoutTests/fast/repaint/mathm-gains-new-content-blank-expected.txt: Added.
* LayoutTests/fast/repaint/mathm-gains-new-content-blank.html: Added.
* Source/WebCore/rendering/mathml/RenderMathMLBlock.cpp:
(WebCore::RenderMathMLBlock::layoutItems):

Canonical link: https://commits.webkit.org/262674@main