Source/WebCore/rendering/mathml/RenderMathMLMath.cpp
@@ -45,12 +45,21 @@ RenderMathMLMath::RenderMathMLMath(MathMLRowElement& element, RenderStyle&& styl
 
 void RenderMathMLMath::centerChildren(LayoutUnit contentWidth)
 {
-    LayoutUnit centerBlockOffset = (logicalWidth() - contentWidth) / 2;
+    auto centerBlockOffset = (logicalWidth() - contentWidth) / 2;
+    if (!centerBlockOffset)
+        return;
+
     if (!style().isLeftToRightDirection())
         centerBlockOffset = -centerBlockOffset;
     for (auto* child = firstChildBox(); child; child = child->nextSiblingBox()) {
-        if (!child->isOutOfFlowPositioned())
-            child->setLocation(child->location() + LayoutPoint(centerBlockOffset, 0_lu));
+        if (!child->isInFlow())
+            continue;
+        auto repaintRect = child->checkForRepaintDuringLayout() ? std::make_optional(child->frameRect()) : std::nullopt;
+        child->move(centerBlockOffset, { });
+        if (repaintRect) {
+            repaintRect->uniteEvenIfEmpty(child->frameRect());
+            repaintRectangle(*repaintRect);
+        }
     }
 }
 
